Changing video height to 100% to fix video size on mobile.

--- a/styles/main.css
+++ b/styles/main.css
@@ -74,7 +74,7 @@ h6 {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 
